@@ -66,7 +66,8 @@ int32_t atmel_read_flash( dfu_device_t *device,
                           const uint32_t end,
                           uint8_t* buffer,
                           const size_t buffer_len,
-                          const dfu_bool eeprom );
+                          const dfu_bool eeprom,
+                          const dfu_bool user );
 int32_t atmel_blank_check( dfu_device_t *device,
                            const uint32_t start,
                            const uint32_t end );
@@ -77,6 +78,9 @@ int32_t atmel_flash( dfu_device_t *device,
                      const uint32_t end,
                      const size_t flash_page_size,
                      const dfu_bool eeprom );
+int32_t atmel_user( dfu_device_t *device,
+                    int16_t *buffer,
+                    const uint32_t end );
 int32_t atmel_start_app( dfu_device_t *device );
 
 void atmel_print_device_info( FILE *stream, atmel_device_info_t *info );
